@@ -22,12 +22,14 @@ kmk_DEFS = \
 	CONFIG_WITH_EXTENDED_NOTPARALLEL \
     CONFIG_WITH_INCLUDEDEP \
 	CONFIG_WITH_TOUPPER_TOLOWER \
-	CONFIG_WITH_VALUE_LENGTH \
-	CONFIG_WITH_COMPARE \
 	KMK \
+	\
+	KMK_HELPERS \
+	VARIABLE_HASH \
 	CONFIG_WITH_OPTIMIZATION_HACKS \
-	VARIABLE_HASH
-	
+	CONFIG_WITH_VALUE_LENGTH \
+	CONFIG_WITH_COMPARE
+
 kmk_SOURCES = \
 	main.c \
 	read.c \
